force-app/main/default/objects/Campaign/fields/Campaign_Topic__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Topic__c</fullName>
    <description>will be used for Naming Convention</description>
    <inlineHelpText>Please enter the Campaign Topic e.g. Event Name, Christmas Cards, etc.</inlineHelpText>
    <label>Campaign Topic</label>
    <length>30</length>
    <type>Text</type>
</CustomField>