force-app/main/default/objects/Campaign/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <inlineHelpText>Used for Marketing Attribution</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cold E-Mailing</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Meetup</fullName>
            </value>
            <value>
                <fullName>Paid Referral</fullName>
            </value>
            <value>
                <fullName>SuperRecruiter</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>