force-app/main/default/objects/Campaign/fields/Cost_Per_Campaign_Member__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Campaign_Member__c</fullName>
    <label>Cost Per Campaign Member</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>