force-app/main/default/objects/Campaign/fields/Lead_Score_Group__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Group__c</fullName>
    <description>Defines the Target Group for Reporting and Naming Convention</description>
    <inlineHelpText>Defines the Target Group for Reporting and Naming Convention</inlineHelpText>
    <label>Lead Score Group</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>A+</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B+</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>