force-app/main/default/objects/Campaign/fields/Number_of_Campaign_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Campaign_Members__c</fullName>
    <description>RO-960</description>
    <label>Number of Campaign Members</label>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>