force-app/main/default/objects/Campaign/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <description>RO-927 (Not used anymore on the Campaign object)</description>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LCS</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>