force-app/main/default/objects/Campaign/fields/Target_Group__c.field-meta.xml
<CustomField>
    <fullName>Target_Group__c</fullName>
    <description>Defines the Target Group for Reporting and Naming Convention</description>
    <inlineHelpText>Defines the Target Group for Reporting and Naming Convention</inlineHelpText>
    <label>Target Group</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>Head of HR</fullName>
            </value>
            <value>
                <fullName>Head ofs (not HR)</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>HR in General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>