force-app/main/default/objects/Campaign/fields/Total_E_Mails_Sent__c.field-meta.xml
<CustomField>
    <fullName>Total_E_Mails_Sent__c</fullName>
    <description>Total Amount of Sent E-Mail in this Campaign</description>
    <inlineHelpText>Total Amount of Sent E-Mail in this Campaign</inlineHelpText>
    <label>Total E-Mails Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>