force-app/main/default/objects/Campaign/fields/Touchpoint_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Touchpoint_Date_Time__c</fullName>
    <inlineHelpText>The Date/Time the touch point occurred; used in Marketing Attribution</inlineHelpText>
    <label>Touchpoint Date / Time</label>
    <type>DateTime</type>
</CustomField>