force-app/main/default/objects/Campaign/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>4/10/2024 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>