force-app/main/default/objects/Campaign/listViews/All_Company_Buckets.listView-meta.xml
<ListView>
    <fullName>All_Company_Buckets</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Decentral Holding Bucket</value>
    </filters>
    <label>All Company Buckets</label>
    <sharedTo></sharedTo>
</ListView>