force-app/main/default/objects/Campaign/listViews/All_Inactive_Campaigns2.listView-meta.xml
<ListView>
    <fullName>All_Inactive_Campaigns2</fullName>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>AMOUNT_ALL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Inactive Campaigns</label>
</ListView>