force-app/main/default/objects/Campaign/listViews/All_planned_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_planned_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Planned</value>
    </filters>
    <label>All planned Campaigns</label>
    <sharedTo></sharedTo>
</ListView>