force-app/main/default/objects/Campaign/listViews/AllActiveCampaigns.listView-meta.xml
<ListView>
    <fullName>AllActiveCampaigns</fullName>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_LEADS</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>AMOUNT_ALL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Lead_Score_Group__c</columns>
    <columns>Target_Group__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>martynel</value>
    </filters>
    <label>All Active Campaigns</label>
</ListView>