force-app/main/default/objects/Campaign/listViews/CEO_Mails_2022.listView-meta.xml
<ListView>
    <fullName>CEO_Mails_2022</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>Total_E_Mails_Sent__c</columns>
    <columns>Segment__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>CEO</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>startsWith</operation>
        <value>2022_4,2022_5,2022_6</value>
    </filters>
    <label>CEO Mails 2022</label>
</ListView>