force-app/main/default/objects/Campaign/listViews/LeadGen_All_outbound_activitites_Q3_4.listView-meta.xml
<ListView>
    <fullName>LeadGen_All_outbound_activitites_Q3_4</fullName>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_SENT</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>Total_E_Mails_Sent__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
        <value>2019_Q3-4 All Outbound Activities</value>
    </filters>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>LeadGen - All outbound activitites Q3-4</label>
    <sharedTo>
        <role>Salesforce_Administrator</role>
    </sharedTo>
</ListView>