force-app/main/default/objects/Campaign/listViews/LeadGen_Zukunft_Personal.listView-meta.xml
<ListView>
    <fullName>LeadGen_Zukunft_Personal</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>Total_E_Mails_Sent__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>Zukunft Personal</value>
    </filters>
    <label>LeadGen - Zukunft Personal</label>
    <sharedTo>
        <role>Salesforce_Administrator</role>
    </sharedTo>
</ListView>