force-app/main/default/objects/Campaign/listViews/X2024_10_17_Agency_Ingestion.listView-meta.xml
<ListView>
    <fullName>X2024_10_17_Agency_Ingestion</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.BUDGETED_COST</columns>
    <columns>CAMPAIGN.ACTUAL_COST</columns>
    <filterScope>Mine</filterScope>
    <label>2024-10-17_Agency_Ingestion</label>
</ListView>